# my-fm-mcp

./: .gitignore  CLAUDE.md  sample.xml
docs/: layout-feature.md
fm-plugin/: README.txt  pack_for_windows.sh
fm-plugin/FileMakerMCP/: CMakeLists.txt  FileMakerMCP.sln  linux_build_plugin.sh
fm-plugin/FileMakerMCP/FileMakerMCP/: FileMakerMCP.cpp  FileMakerMCP.rc  FileMakerMCP.vcxproj  FileMakerMCP.vcxproj.filters  Info.plist  clipboard_mac.h  clipboard_mac.mm  resource.h
fm-plugin/FileMakerMCP/FileMakerMCP.xcodeproj/: project.pbxproj
fm-plugin/FileMakerMCP/FileMakerMCP.xcodeproj/xcshareddata/xcschemes/: FileMakerMCP.xcscheme
fm-plugin/Libraries/: README.md
mcp-server/: Cargo.toml
mcp-server/filemaker-navigate/: SKILL.md
mcp-server/filemaker-navigate/operations/: clear_cache.json  define_table.json  navigate_advanced_tools.json  navigate_field_input_method.json  navigate_layout.json  navigate_save_as_xml.json  navigate_script_manage.json  navigate_script_workspace.json
mcp-server/src/: ax_navigate.rs  clipboard.rs  ipc.rs  layout_gen.rs  main.rs
