[package]
name    = "filemaker-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
accessibility-sys = "0.1"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[profile.release]
strip     = true
opt-level = 3
