[package]
name    = "filemaker-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
accessibility-sys = "0.1"
core-foundation = "0.9"
# NSWindow overlay
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
    "NSGraphics",
    "NSColor",
    "NSScreen",
] }
objc2-foundation = { version = "0.2", features = [
    "NSDate",
    "NSRunLoop",
    "NSString",
    "NSThread",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[lints.rust]
# objc 0.2 の sel_impl マクロが cargo-clippy cfg を参照するため発生する既知の警告を抑制
unexpected_cfgs = "allow"

[profile.release]
strip     = true
opt-level = 3
